--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ group 'io.github.theblacksquidward'
 version '1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         url 'https://m2.dv8tion.net/releases'
@@ -26,6 +27,7 @@ dependencies {
     implementation 'net.dv8tion:JDA:4.4.0_352'
     implementation 'com.github.Kaktushose:jda-commands:v.2.2.0'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
+    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.0'
     implementation "org.apache.logging.log4j:log4j-api:${LOG4J_VERSION}"
     implementation "org.apache.logging.log4j:log4j-core:${LOG4J_VERSION}"
     implementation "org.apache.logging.log4j:log4j-slf4j18-impl:${LOG4J_VERSION}"
