--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.jetbrains:annotations:22.0.0'
     implementation 'io.github.cdimascio:dotenv-java:2.2.3'
     implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'net.dv8tion:JDA:4.4.0_352'
     implementation 'com.github.Kaktushose:jda-commands:v.2.2.0'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
