--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:22.0.0'
+    implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'io.github.cdimascio:dotenv-java:2.2.3'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.14.3'
-    implementation 'net.dv8tion:JDA:4.4.0_352'
-    implementation 'com.github.Kaktushose:jda-commands:v.2.2.0'
+    implementation 'net.dv8tion:JDA:5.0.0-alpha.9'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
     implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.0'
     implementation "org.apache.logging.log4j:log4j-api:${LOG4J_VERSION}"
