--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.9'
-    implementation 'com.sedmelluq:lavaplayer:1.3.78'
+    implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
     implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.0'
     implementation "org.apache.logging.log4j:log4j-api:${LOG4J_VERSION}"
     implementation "org.apache.logging.log4j:log4j-core:${LOG4J_VERSION}"
