--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,12 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
-
-mainClassName = 'io.github.theblacksquidward.squidwardbot.SquidwardBot'
 
 group 'io.github.theblacksquidward'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenLocal()
     mavenCentral()
     maven {
         url 'https://m2.dv8tion.net/releases'
@@ -26,16 +22,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.9'
-    implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
-    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.0'
+    implementation 'org.reflections:reflections:0.10.2'
+    implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:custom-SNAPSHOT'
+    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.1'
     implementation "org.apache.logging.log4j:log4j-api:${LOG4J_VERSION}"
     implementation "org.apache.logging.log4j:log4j-core:${LOG4J_VERSION}"
     implementation "org.apache.logging.log4j:log4j-slf4j18-impl:${LOG4J_VERSION}"
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-}
-
-test {
-    useJUnitPlatform()
 }
