--- a/destiny-api-wrapper/build.gradle
+++ b/destiny-api-wrapper/build.gradle
@@ -10,8 +10,17 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'io.github.cdimascio:dotenv-java:2.2.3'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation "org.apache.logging.log4j:log4j-api:${LOG4J_VERSION}"
+    implementation "org.apache.logging.log4j:log4j-core:${LOG4J_VERSION}"
+    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:${LOG4J_VERSION}"
+    implementation "mysql:mysql-connector-java:8.0.28"
+
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
