--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
-    implementation 'io.github.cdimascio:dotenv-java:2.2.3'
+    implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.9'
