--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:custom-SNAPSHOT'
     implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.1'
-    implementation "org.apache.logging.log4j:log4j-api:${LOG4J_VERSION}"
-    implementation "org.apache.logging.log4j:log4j-core:${LOG4J_VERSION}"
-    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:${LOG4J_VERSION}"
+    implementation "org.apache.logging.log4j:log4j-api:2.17.2"
+    implementation "org.apache.logging.log4j:log4j-core:2.17.2"
+    implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2"
 }
