--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,30 @@
 allprojects {
-    apply plugin: 'java'
-    apply plugin: 'idea'
+    apply plugin: "java"
+    apply plugin: "idea"
 
-    group 'io.github.theblacksquidward'
-    version '0.0.1'
+    group "io.github.theblacksquidward"
+    version "0.0.1"
 
     repositories {
         mavenCentral()
         maven {
-            url 'https://m2.dv8tion.net/releases'
+            url "https://m2.dv8tion.net/releases"
         }
         maven {
-            url 'https://jitpack.io'
+            url "https://jitpack.io"
         }
     }
 
     dependencies {
-        implementation 'org.jetbrains:annotations:23.0.0'
+        implementation "org.jetbrains:annotations:23.0.0"
         implementation "org.apache.logging.log4j:log4j-api:2.18.0"
         implementation "org.apache.logging.log4j:log4j-core:2.18.0"
         implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.18.0"
-        implementation 'net.dv8tion:JDA:5.0.0-alpha.17'
-        implementation 'org.reflections:reflections:0.10.2'
-        implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
-        implementation 'com.google.guava:guava:31.1-jre'
-        implementation 'com.google.code.gson:gson:2.9.1'
+        implementation "net.dv8tion:JDA:5.0.0-alpha.17"
+        implementation "org.reflections:reflections:0.10.2"
+        implementation "net.sf.jopt-simple:jopt-simple:5.0.4"
+        implementation "com.google.guava:guava:31.1-jre"
+        implementation "com.google.code.gson:gson:2.9.1"
     }
 }
 
