Added admin module

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = "SquidwardBot"
 include "squidwardbot-core"
 include "squidwardbot-audio"
 include "squidwardbot-misc"
+include 'squidwardbot-administration'
 
