--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-rootProject.name = "SquidwardBot"
+rootProject.name = 'SquidwardBot'
 
-include "squidwardbot-core"
-include "squidwardbot-audio"
-include "squidwardbot-misc"
+include 'squidwardbot-core'
+include 'squidwardbot-audio'
+include 'squidwardbot-misc'
 include 'squidwardbot-administration'
 
