--- a/squidwardbot-audio/build.gradle
+++ b/squidwardbot-audio/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-    implementation project(":squidwardbot-core")
+    implementation project(':squidwardbot-core')
 
-    implementation "com.github.walkyst.lavaplayer-fork:lavaplayer:custom-SNAPSHOT"
-    implementation "se.michaelthelin.spotify:spotify-web-api-java:7.2.0"
-    implementation "com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3"
-    implementation "org.jsoup:jsoup:1.15.2"
+    implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:custom-SNAPSHOT'
+    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.2.0'
+    implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
+    implementation 'org.jsoup:jsoup:1.15.2'
 }
