--- a/squidwardbot-core/build.gradle
+++ b/squidwardbot-core/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    implementation "com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3"
+    implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
 }
