--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ allprojects {
         implementation 'com.google.guava:guava:31.1-jre'
         implementation 'com.google.code.gson:gson:2.9.1'
     }
+    compileJava.options.encoding = "UTF-8"
+
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
 }
 
 configurations {
