--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: '18'
         distribution: 'temurin'
     - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      run: chmod 777 gradlew
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
