--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "master, dev" ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ "master, dev" ]
+    branches: [ master, dev ]
 
 permissions:
   contents: read
