--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ jobs:
         uses: christian-draeger/read-properties@1.1.0
         with:
           path: './gradle.properties'
-          property: 'version'
+          properties: 'version'
 
       - name: Get Semantic Versioning
         run: echo ${{steps.version.outputs.version}}
