--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,4 +46,4 @@ jobs:
         run: ./gradlew fatJar
 
       - name: Output Directory Structure
-        run: ls -lhR build-out
+        run: ls -Rla
