--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'squidwardbot-core'
 include 'squidwardbot-audio'
 include 'squidwardbot-misc'
 include 'squidwardbot-moderation'
+include 'squidwardbot-destiny'
 
