--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,8 +3,8 @@
 name: Publish Docker Image
 
 on:
-  push:
-    branches: [ master ]
+  release:
+    types: [published]
 
 jobs:
   variables:
@@ -52,4 +52,30 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: SquidwardBot-${{needs.variables.outputs.version}}
-          path: ./build/libs/SquidwardBot-${{needs.variables.outputs.version}}.jar
+          path: ./build/libs/SquidwardBot.jar
+  docker-publish:
+    name: Builds and Publishes Docker Image
+    runs-on: ubuntu-20.04
+    needs: [ variables, jar ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Gather Docker Metadata
+        uses: docker/metadata-action@v4
+        with:
+          images: theblacksquidward/squidwardbot
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
