--- a/.github/workflows/manual-docker-publish.yml
+++ b/.github/workflows/manual-docker-publish.yml
@@ -66,6 +66,7 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Gather Docker Metadata
+        id: docker_metadata
         uses: docker/metadata-action@v4
         with:
           images: theblacksquidward/squidwardbot
@@ -76,5 +77,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.docker_metadata.outputs.tags }}
+          labels: ${{ steps.docker_metadata.outputs.labels }}
