--- a/.github/workflows/manual-docker-publish.yml
+++ b/.github/workflows/manual-docker-publish.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Unshallow
+        run: git fetch --prune --unshallow
+
       - name: Get Version
         id: version
         uses: christian-draeger/read-properties@1.1.0
@@ -23,6 +26,15 @@ jobs:
 
       - name: Print Semantic Versioning
         run: echo ${{steps.version.outputs.SQUIDWARDBOT_VERSION}}
+  changelog:
+    name: Generate Changelog
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Unshallow
+        run: git fetch --prune --unshallow
   jar:
     name: Build JAR
     runs-on: ubuntu-20.04
@@ -30,6 +42,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Unshallow
+        run: git fetch --prune --unshallow
 
       - name: Setup JDK 18
         uses: actions/setup-java@v3
@@ -51,13 +66,34 @@ jobs:
         with:
           name: SquidwardBot-${{needs.variables.outputs.version}}
           path: ./build/libs/SquidwardBot.jar
+  release-gh:
+    name: Create Github Release
+    runs-on: ubuntu-20.04
+    needs: [variables, changelog, jar]
+    steps:
+      - name: Download SquidwardBot JAR
+        uses: actions/download-artifact@v2
+        with:
+          name: SquidwardBot
+          path: build/libs
+      - name: Create Github Release
+        uses: marvinpinto/action-automatic-releases@v1.2.1
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          automatic_release_tag: ${{needs.variables.outputs.version}}
+          title: Version ${{needs.variables.outputs.version}}
+          files: |
+            ./build/libs/SquidwardBot.jar
   docker-publish:
     name: Builds and Publishes Docker Image
     runs-on: ubuntu-20.04
-    needs: [ variables, jar ]
+    needs: [variables, changelog, jar]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Unshallow
+        run: git fetch --prune --unshallow
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
