--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,7 @@ allprojects {
 
     dependencies {
         implementation 'org.jetbrains:annotations:23.0.0'
-        implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
-        implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
-        implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:2.18.0'
+        implementation group: "ch.qos.logback", name: "logback-classic", version: "1.4.0"
         implementation 'net.dv8tion:JDA:5.0.0-alpha.19'
         implementation 'org.reflections:reflections:0.10.2'
         implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
