--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ allprojects {
 
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             url 'https://m2.dv8tion.net/releases'
         }
