--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         implementation 'org.reflections:reflections:0.10.2'
         implementation 'com.google.guava:guava:31.1-jre'
         implementation 'com.google.code.gson:gson:2.9.1'
+        implementation 'org.apache.commons:commons-text:1.9'
     }
     compileJava.options.encoding = "UTF-8"
 
