--- a/squidwardbot-audio/build.gradle
+++ b/squidwardbot-audio/build.gradle
@@ -1,7 +1,9 @@
 dependencies {
     implementation project(':squidwardbot-core')
 
-    implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:custom-SNAPSHOT'
+    implementation 'com.github.walkyst:lavaplayer-fork:1.3.98.4'
+    implementation 'com.github.TopiSenpai.LavaSrc:lavasrc:3.1.2'
+    implementation 'com.github.natanbc:lavadsp:0.7.7'
     implementation 'com.sedmelluq:jda-nas:1.1.0'
     implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
     implementation 'org.jsoup:jsoup:1.15.3'
