Switched to tasks.register('fatJar') to avoid unnecessary configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     }
 }
 
-task fatJar(type: Jar) {
+tasks.register('fatJar') {
     dependsOn configurations.moduleJar
     manifest {
         attributes(
