Updated to using a custom fork of TopiSenpai's LavaSrc in order to get the necessary functionality required.

--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,8 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
-        maven {
-            url 'https://m2.dv8tion.net/releases'
-        }
-        maven {
-            url 'https://jitpack.io'
-        }
+        maven { url 'https://m2.dv8tion.net/releases' }
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
