--- a/squidwardbot-audio/build.gradle
+++ b/squidwardbot-audio/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     implementation project(':squidwardbot-core')
 
     implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:1.3.99.2'
+    implementation 'com.github.TheBlackSquidward.LavaSrc:lavasrc:3.1.8'
     implementation 'com.sedmelluq:jda-nas:1.1.0'
     implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
     implementation 'org.jsoup:jsoup:1.15.3'
