--- a/src/main/resources/.env.example
+++ b/src/main/resources/.env.example
@@ -3,6 +3,7 @@ OWNER_ID=
 
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
+APPLE_MUSIC_MEDIA_API_TOKEN
 DEEZER_MASTER_DECRYPTION_KEY=
 
 TENOR_API_KEY=
