Started implementing a R6 Stats Command.

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'squidwardbot-misc'
 include 'squidwardbot-moderation'
 include 'squidwardbot-destiny'
 include 'squidwardbot-fun'
+include 'squidwardbot-rainbowsix'
 
