--- a/squidwardbot-audio/build.gradle
+++ b/squidwardbot-audio/build.gradle
@@ -1,8 +1,19 @@
 dependencies {
     implementation project(':squidwardbot-core')
 
-    implementation 'com.github.TheBlackSquidward:lavaplayer-fork:9db5273c0c'
-    implementation 'com.sedmelluq:jda-nas:1.1.0'
+    implementation 'com.github.TheBlackSquidward:lavaplayer-fork:2fc265ad79'
+
+    implementation("com.sedmelluq:jda-nas:1.1.0") {
+        exclude module: 'udp-queue'
+    }
+    implementation("club.minnced:udpqueue-native-linux-x86-64:0.2.6")
+    implementation("club.minnced:udpqueue-native-linux-x86:0.2.6")
+    implementation("club.minnced:udpqueue-native-linux-aarch64:0.2.6")
+    implementation("club.minnced:udpqueue-native-linux-arm:0.2.6")
+    implementation("club.minnced:udpqueue-native-win-x86-64:0.2.6")
+    implementation("club.minnced:udpqueue-native-win-x86:0.2.6")
+    implementation("club.minnced:udpqueue-native-darwin:0.2.6")
+
     implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
     implementation 'org.jsoup:jsoup:1.15.4'
     implementation 'commons-io:commons-io:2.11.0'
