--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'squidwardbot-moderation'
 include 'squidwardbot-destiny'
 include 'squidwardbot-fun'
 include 'squidwardbot-rainbowsix'
+include 'squidwardbot-voicemaster'
 
