--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [ * ]
   pull_request:
-    branches: [ master, dev ]
+    branches: [ * ]
 
 permissions:
   contents: read
@@ -15,14 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 18
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Set up JDK 20
       uses: actions/setup-java@v3
       with:
-        java-version: '19'
+        java-version: '20'
         distribution: 'temurin'
     - name: Grant execute permission for gradlew
-      run: chmod 777 gradlew
+      run: chmod +x gradlew
     - name: Validate Gradle Wrapper
       uses: gradle/wrapper-validation-action@v1
     - name: Build with Gradle
