--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,17 +11,20 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    - name: Grant execute permission for gradlew
+    - name: Checkout Repository
+      uses: actions/checkout@v3.5.3
+    - name: Set up JDK 20
+      uses: actions/setup-java@v3.11.0
+      with:
+        java-version: '20'
+        distribution: 'temurin'
+    - name: Grant Execute Permission for Gradlew
       run: chmod +x gradlew
     - name: Validate Gradle Wrapper
-      uses: gradle/wrapper-validation-action@v1
+      uses: gradle/wrapper-validation-action@v1.0.6
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@v2.4.2
+      uses: gradle/gradle-build-action@v2.5.1
       with:
         arguments: build
