--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,7 +11,7 @@ permissions:
     packages: write
 
 jobs:
-  setup:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -32,25 +32,33 @@ jobs:
       - name: List files
         run: ls -Rla
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v2.2.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Log in to Container Registry
-        uses: docker/login-action@v1.10.0
+        uses: docker/login-action@v2.2.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract Docker Image Metadata for Docker
         id: meta
-        uses: docker/metadata-action@v3.5.0
+        uses: docker/metadata-action@v4.6.0
         with:
           images: |
             theblacksquidward/squidwardbot
             ghcr.io/${{ github.repository }}
+          tags: |
+            type=semver,pattern={{version}},value=${{ inputs.version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
+            type=semver,pattern={{major}},value=${{ inputs.version }}
+            type=ref,event=branch,suffix=-{{ sha }}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/') }}
+          flavor: |
+            latest=false
       - name: Build and Push Docker Images
-        uses: docker/build-push-action@v2.7.0
+        uses: docker/build-push-action@v4.1.1
         with:
           context: .
           push: true
