--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,10 @@ on:
   release:
     types:
       - published
+  push:
+    branches: '**'
+  pull_request:
+    branches: '**'
 
 permissions:
     contents: read
@@ -50,9 +54,9 @@ jobs:
             theblacksquidward/squidwardbot
             ghcr.io/${{ github.repository }}
           tags: |
-            type=semver,pattern={{version}},value=${{ inputs.version }}
+            type=semver,pattern={{ version }},value=${{ inputs.version }}
             type=ref,event=branch,value={{ branch }}
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/') }}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
           flavor: |
             latest=false
       - name: Build and Push Docker Images
