--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,8 @@ dependencies {
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
     implementation 'org.apache.commons:commons-text:1.10.0'
     implementation 'com.github.TheBlackSquidward:lavaplayer-fork:2fc265ad79'
-
-    implementation("com.sedmelluq:jda-nas:1.1.0") {
-        exclude module: 'udp-queue'
-    }
+    implementation 'net.sf.jopt-simple:jopt-simple:4.7'
+    implementation("com.sedmelluq:jda-nas:1.1.0") { exclude module: 'udp-queue' }
     implementation("club.minnced:udpqueue-native-linux-x86-64:0.2.6")
     implementation("club.minnced:udpqueue-native-linux-x86:0.2.6")
     implementation("club.minnced:udpqueue-native-linux-aarch64:0.2.6")
@@ -42,11 +40,9 @@ dependencies {
     implementation("club.minnced:udpqueue-native-win-x86-64:0.2.6")
     implementation("club.minnced:udpqueue-native-win-x86:0.2.6")
     implementation("club.minnced:udpqueue-native-darwin:0.2.6")
-
     implementation 'com.github.LowLevelSubmarine:GeniusLyricsAPI:1.0.3'
     implementation 'org.jsoup:jsoup:1.15.4'
     implementation 'commons-io:commons-io:2.11.0'
-
     implementation("com.fasterxml.jackson.core:jackson-core:2.15.0")
     implementation("com.fasterxml.jackson.core:jackson-databind:2.15.0")
 }
