Fix failing builds...

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ tasks.withType(JavaCompile) {
 
 jar {
     archiveFileName.set('SquidwardBot.jar')
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     manifest {
         attributes(
