--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,51 +20,51 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3.5.3
-      - name: Set up JDK 20
-        uses: actions/setup-java@v3.11.0
-        with:
-          java-version: '20'
-          distribution: 'temurin'
-      - name: Grant Execute Permission for Gradlew
-        run: chmod +x gradlew
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1.0.6
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2.5.1
-        with:
-          arguments: build
-      - name: List files
-        run: ls -Rla
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2.2.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Log in to Container Registry
-        uses: docker/login-action@v2.2.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract Docker Image Metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v4.6.0
-        with:
-          images: |
-            theblacksquidward/squidwardbot
-            ghcr.io/${{ github.repository }}
-          tags: |
-            type=semver,pattern={{ version }},value=${{ inputs.version }}
-            type=ref,event=branch,value={{ branch }}
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
-          flavor: |
-            latest=false
-      - name: Build and Push Docker Images
-        uses: docker/build-push-action@v4.1.1
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#      - name: Set up JDK 20
+#        uses: actions/setup-java@v3.11.0
+#        with:
+#          java-version: '20'
+#          distribution: 'temurin'
+#      - name: Grant Execute Permission for Gradlew
+#        run: chmod +x gradlew
+#      - name: Validate Gradle Wrapper
+#        uses: gradle/wrapper-validation-action@v1.0.6
+#      - name: Build with Gradle
+#        uses: gradle/gradle-build-action@v2.5.1
+#        with:
+#          arguments: build
+#      - name: List files
+#        run: ls -Rla
+#      - name: Log in to Docker Hub
+#        uses: docker/login-action@v2.2.0
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Log in to Container Registry
+#        uses: docker/login-action@v2.2.0
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Extract Docker Image Metadata for Docker
+#        id: meta
+#        uses: docker/metadata-action@v4.6.0
+#        with:
+#          images: |
+#            theblacksquidward/squidwardbot
+#            ghcr.io/${{ github.repository }}
+#          tags: |
+#            type=semver,pattern={{ version }},value=${{ inputs.version }}
+#            type=ref,event=branch,value={{ branch }}
+#            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
+#          flavor: |
+#            latest=false
+#      - name: Build and Push Docker Images
+#        uses: docker/build-push-action@v4.1.1
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
 
 
