Use Google's Java Format

--- a/build.gradle
+++ b/build.gradle
@@ -91,5 +91,7 @@ spotless {
         importOrder()
         formatAnnotations()
         removeUnusedImports()
+
+        googleJavaFormat('1.19.2')
     }
 }
