--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ version '0.2.6'
 
 repositories {
     mavenCentral()
+    jcenter()
     maven { url 'https://m2.dv8tion.net/releases' }
     maven { url 'https://jitpack.io' }
 }
